--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 :root {
-	--dark-color-a: #8b4b74;
-	--dark-color-b: #74384c;
-	--light-color: #f2d8e9;
+	--dark-color-a: #517864;
+	--dark-color-b: #314b3f;
+	--dark-color-c: #22322b;
+	--light-color: #e1eae3;
 	--success-color: #5cb85c;
 	--error-color: #d9534f;
 }
@@ -17,7 +18,7 @@
 body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
-	background: var(--light-color);
+	background: var(--dark-color-c);
 	margin: 20px;
 }
 
@@ -42,7 +43,7 @@ a {
 
 .chat-container {
 	max-width: 1100px;
-	background: #fff;
+	/* background: #fff; */
 	margin: 30px auto;
 	overflow: hidden;
 }
@@ -54,6 +55,8 @@ a {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
 }
 
 .chat-main {
@@ -73,6 +76,7 @@ a {
 	background: rgba(0, 0, 0, 0.1);
 	padding: 10px;
 	margin-bottom: 20px;
+	border-radius: 5px;
 }
 
 .chat-sidebar h3 {
@@ -87,6 +91,7 @@ a {
 	padding: 30px;
 	max-height: 500px;
 	overflow-y: scroll;
+	background: #fff;
 }
 
 .chat-messages .message {
@@ -99,7 +104,7 @@ a {
 .chat-messages .message .meta {
 	font-size: 15px;
 	font-weight: bold;
-	color: var(--dark-color-b);
+	/* color: var(--dark-color-c); */
 	opacity: 0.7;
 	margin-bottom: 7px;
 }
@@ -111,6 +116,8 @@ a {
 .chat-form-container {
 	padding: 20px 30px;
 	background-color: var(--dark-color-a);
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
 }
 
 .chat-form-container form {
@@ -124,6 +131,21 @@ a {
 	flex: 1;
 }
 
+.user-list-container {
+	padding: 0 10px;
+	background-color: rgba(0, 0, 0, 0.1);
+	border-radius: 5px;
+}
+
+.user-item {
+	font-size: 18px;
+}
+
+.active-user {
+	padding: 8px 0;
+	font-weight: bold;
+}
+
 /* Join Page */
 .join-container {
 	max-width: 500px;
@@ -135,11 +157,15 @@ a {
 	text-align: center;
 	padding: 20px;
 	background: var(--dark-color-a);
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
 }
 
 .join-main {
 	padding: 30px 40px;
 	background: var(--dark-color-b);
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
 }
 
 .join-main p {
