--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,3 +49,22 @@ a {
 .disable-this {
 	display: none;
 }
+
+.required {
+	animation: shake .5s ease-in-out;
+	animation-iteration-count: 1;
+}
+
+input {
+	border: none;
+	box-shadow: inset 0 0 0 0 black;
+}
+
+
+@keyframes shake {
+	0% { transform: translate(-2px,0px) rotate(0deg); box-shadow: inset 0 0 2px 1px #82030333; }
+	25% { transform: translate(3px,0px) rotate(0deg); box-shadow: inset 0 0 4px 2px #82030388; }
+	50% { transform: translate(-3px,0px) rotate(0deg); box-shadow: inset 0 0 4px 2px #82030388; }
+	75% { transform: translate(2px,0px) rotate(0deg); box-shadow: inset 0 0 2px 1px #82030333; }
+	100% { transform: translate(0px,0px) rotate(0deg); box-shadow: inset 0 0 0 0 #00000000; }
+}
