style: truncate long usernames and show full name on hover

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -95,6 +95,12 @@
 	border-radius: 5px;
 }
 
+.user-list-container * {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 .user-item {
 	font-size: 18px;
 }
