--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,35 +1,56 @@
 /* Chat Page */
 
 .chat-container {
-	max-width: 1100px;
-	margin: 30px auto;
+	height: 100vh;
+	padding: var(--chat-padding);
 	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
 
 .chat-header {
-	background: var(--dark-color-a);
+	background: var(--secondary-color);
 	color: #fff;
-	padding: 15px;
-	display: flex;
+	padding: 20px;
+	display: none;
 	align-items: center;
 	justify-content: space-between;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
+	border-radius: 5px;
+	height: 100px;
 }
 
 .chat-main {
-	display: grid;
-	grid-template-columns: 1fr 3fr;
+	height: 100%;
+	display: flex;
+	align-items: stretch;
+	justify-content: flex-start;
+	gap: 10px;
 }
 
 .chat-sidebar {
-	background: var(--dark-color-b);
+	background: var(--secondary-color);
 	color: #fff;
-	padding: 20px 20px 60px;
+	padding: 20px;
 	overflow-y: scroll;
+	scrollbar-width: none;
+	flex: 1 1 auto;
+	border-radius: 5px;
+	min-width: 250px;
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
 }
 
-.room-name-container {
+.sidebar-data {
+	flex: 1 1 auto;
+}
+
+.leave-btn {
+	background-color: var(--accent-color-b);
+}
+
+.room-code-container {
 	position: relative;
 	display: grid;
 	grid-template-columns: 3fr .5fr;
@@ -73,8 +94,8 @@
 	transform: translateY(0);
 }
 
-.room-name-container:has(.copy-btn:active) .check-icon,
-.room-name-container:has(.copy-btn.copy-btn.clicked) .check-icon
+.room-code-container:has(.copy-btn:active) .check-icon,
+.room-code-container:has(.copy-btn.copy-btn.clicked) .check-icon
 {
 	transform: translateY(0);
 	opacity: 1;
@@ -92,25 +113,34 @@
 	padding: 10px 0;
 }
 
+.chat-main-part {
+	height: 100%;
+	flex: 3 1 auto;
+	display: flex;
+	flex-direction: column;
+}
+
 .chat-messages {
-	padding: 30px;
+	padding: var(--chat-messages-padding);
 	overflow-y: scroll;
 	overflow-wrap: break-word;
-	background: var(--dark-color-b);
-	max-height: 75vh;
+	background: var(--primary-color);
+	flex: 1 1 auto;
+	border-top-right-radius: 5px;
+	border-top-left-radius: 5px;
 }
 
 .chat-messages .message {
-	padding: 10px;
+	padding: var(--message-padding);
 	margin-bottom: 15px;
 	background-color: var(--light-color);
 	border-radius: 5px;
+	flex: 1 1 auto;
 }
 
 .chat-messages .message .meta {
 	font-size: 15px;
 	font-weight: bold;
-	/* color: var(--dark-color-c); */
 	opacity: 0.7;
 	margin-bottom: 7px;
 }
@@ -121,20 +151,24 @@
 
 .chat-form-container {
 	padding: 20px 30px;
-	background-color: var(--dark-color-a);
-	border-bottom-left-radius: 5px;
+	background-color: var(--primary-color);
 	border-bottom-right-radius: 5px;
+	border-bottom-left-radius: 5px;
 }
 
 .chat-form-container form {
 	display: flex;
+	gap: 10px;
 }
 
 .chat-form-container input[type='text'] {
 	font-size: 16px;
-	padding: 5px;
+	padding: 10px;
 	height: 40px;
 	flex: 1;
+	border-radius: 5px;
+	background: #303436aa;
+	color: #fff;
 }
 
 .user-list-container {
@@ -158,7 +192,7 @@
 	font-weight: bold;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1000px) {
 	.chat-main {
 		display: block;
 	}
