--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 :root {
-	--dark-color-a: #4c818b;
-	--dark-color-b: #456f6f;
-	--dark-color-c: #85abab;
-	--light-color: #dddbd3;
-	--success-color: #5cb85c;
-	--error-color: #d9534f;
+	/* paddings */
+	--chat-padding: 20px;
+	--chat-messages-padding: 20px;
+	--message-padding: 10px;
+
+	/* dark mode */
+	--background: #242728;
+	--primary-color: #454F54;
+	--secondary-color: #303436;
+	--tertiary-color: #303436;
+	--light-color: #D9D9D9;
+	--accent-color-a: #0F3F57;
+	--accent-color-b: hsl(350, 70%, 30%);
+
+	--sb-size: 8px;
+	--sb-track-color: #0000;
+	--sb-thumb-color: #242728;
 }
 
 * {
@@ -17,9 +28,7 @@
 
 body {
 	font-family: 'Roboto', sans-serif;
-	font-size: 16px;
-	background: var(--dark-color-c);
-	margin: 20px;
+	background: var(--background);
 }
 
 ul {
@@ -33,17 +42,16 @@ a {
 .btn {
 	cursor: pointer;
 	padding: 10px 15px;
-	background: var(--light-color);
-	color: var(--dark-color-a);
+	background: var(--accent-color-a);
+	color: #ffff;
 	border: 0;
-	font-size: 17px;
-	font-weight: bold;
+	border-radius: 5px;
 }
 
 .btn:disabled {
 	cursor: default;
-	background: #dddbd3aa;
-	color: #4c818baa;
+	background: #0F3F57aa;
+	color: #fff8;
 }
 
 .disable-this {
@@ -56,8 +64,35 @@ a {
 }
 
 input {
+	outline: none;
 	border: none;
 	box-shadow: inset 0 0 0 0 black;
+}
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+	scrollbar-width: auto;
+	scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+}
+
+/* Chrome, Edge, and Safari */
+::-webkit-scrollbar {
+	width: var(--sb-size);
+}
+
+::-webkit-scrollbar-track {
+	background: var(--sb-track-color);
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: var(--sb-thumb-color);
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar-button {
+	display: none;
 }
 
 
