--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -40,6 +40,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: start;
+	transition: 300ms ease-in-out;
 }
 
 .sidebar-data {
@@ -192,12 +193,7 @@
 	font-weight: bold;
 }
 
-@media (max-width: 1000px) {
-	.chat-main {
-		display: block;
-	}
 
-	.chat-sidebar {
-		display: none;
-	}
+@media (max-width: 1000px) {
+	
 }
