--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -4,6 +4,7 @@
     top: 0; left: 0;
     width: 100%; height: 100%;
     background: rgba(0,0,0,0.7);
+    backdrop-filter: blur(10px);
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -11,7 +12,6 @@
 }
 
 .modal-elements {
-    background: var(--dark-color-b);
     color: #ffffff;
     display: flex;
     align-items: center;
@@ -34,6 +34,11 @@
 }
 
 .username-form input {
-    padding: 5px;
-    
+    font-size: 16px;
+	padding: 10px;
+	height: 40px;
+	flex: 1;
+	border-radius: 5px;
+	background: #303436aa;
+	color: #fff;
 }
