--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -12,20 +12,21 @@
 .chat-header {
 	background: var(--secondary-color);
 	color: #fff;
-	padding: 20px;
+	padding: 12px;
 	display: none;
 	align-items: center;
 	justify-content: space-between;
 	border-radius: 5px;
-	height: 100px;
 }
 
 .chat-main {
+	position: relative;
 	height: 100%;
 	display: flex;
 	align-items: stretch;
 	justify-content: flex-start;
 	gap: 10px;
+	overflow: hidden;
 }
 
 .chat-sidebar {
@@ -36,7 +37,7 @@
 	scrollbar-width: none;
 	flex: 1 1 auto;
 	border-radius: 5px;
-	min-width: 250px;
+	min-width: 200px;
 	display: flex;
 	flex-direction: column;
 	justify-content: start;
@@ -52,73 +53,25 @@
 }
 
 .room-code-container {
-	position: relative;
-	display: grid;
-	grid-template-columns: 3fr .5fr;
-	background: rgba(0, 0, 0, 0.1);
-	padding: 10px;
-	margin-bottom: 20px;
+	margin: 4px 0 12px;
 	border-radius: 5px;
-}
 
-.copy-btn, .check-icon {
-	position: absolute;
-	font-size: 1.4rem;
-	right: 0.5rem;
-	top: 50%;
-	translate: 0 -50%;
-	transition-behavior: discrete;
-	transition-property: opacity transform;
-	transition-duration: .3s;
-}
-
-.copy-btn {
-	text-decoration: none;
-	text-shadow: 0 4px 0 #0005;
-	border: none;
-	background-color: #0000;
-	cursor: pointer;
-	transform: translateY(-2px);
-}
-
-.check-icon {
-	-webkit-user-select: none; /* Safari */
-	-ms-user-select: none; /* IE 10 and IE 11 */
-	user-select: none; /* Standard syntax */
-	opacity: 0;
-	transform: translateY(-2px);
-}
-
-.copy-btn:active, .copy-btn.clicked {
-	opacity: 0;
-	text-shadow: none;
-	transform: translateY(0);
-}
-
-.room-code-container:has(.copy-btn:active) .check-icon,
-.room-code-container:has(.copy-btn.copy-btn.clicked) .check-icon
-{
-	transform: translateY(0);
-	opacity: 1;
-}
-
-.chat-sidebar h2 {
-	font-size: 30px;
+	> .room-btn {
+		width: 100%;
+		justify-content: flex-start;
+		gap: 12px;
+	}
 }
 
 .chat-sidebar h3 {
-	margin-bottom: 15px;
-}
-
-.chat-sidebar ul li {
-	padding: 10px 0;
+	margin-bottom: 4px;
 }
 
 .chat-main-part {
-	height: 100%;
 	flex: 3 1 auto;
 	display: flex;
 	flex-direction: column;
+	min-width: 280px;
 }
 
 .chat-messages {
@@ -140,7 +93,7 @@
 }
 
 .chat-messages .message .meta {
-	font-size: 15px;
+	font-size: 16px;
 	font-weight: bold;
 	opacity: 0.7;
 	margin-bottom: 7px;
@@ -151,7 +104,7 @@
 }
 
 .chat-form-container {
-	padding: 20px 30px;
+	padding: 20px;
 	background-color: var(--primary-color);
 	border-bottom-right-radius: 5px;
 	border-bottom-left-radius: 5px;
@@ -173,7 +126,8 @@
 }
 
 .user-list-container {
-	padding: 0 10px;
+	margin: 4px 0;
+	padding: 0 12px;
 	background-color: rgba(0, 0, 0, 0.1);
 	border-radius: 5px;
 }
@@ -185,15 +139,134 @@
 }
 
 .user-item {
-	font-size: 18px;
+	font-size: 16px;
+	padding: 12px 0;
 }
 
 .active-user {
-	padding: 8px 0;
+	padding: 12px 0 8px;
 	font-weight: bold;
+
+	> span {
+		font-weight: normal;
+		font-size: 12px;
+	}
 }
 
+.room-btn{
+	font-size: 24px;
+	font-weight: bold;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	background: rgba(0, 0, 0, 0.1);
+	padding: 10px;
+	border-radius: 5px;
+	min-width: 105px;
+	height: 3.125rem;
 
-@media (max-width: 1000px) {
+	> i { 
+		font-size: 20px;
+	}
+}
+
+.users-container {
+	background: var(--secondary-color);
+	color: #fff;
+	padding: 20px;
+	overflow-y: scroll;
+	scrollbar-width: none;
+	flex: 1 1 auto;
+	border-radius: 5px;
+	min-width: 250px;
+	z-index: 998;
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	transition: all 300ms ease-in-out;
+	order: 2;
+}
+
+@media (min-width: 769px ) {
+	.users-container {
+		display: none !important;
+	}
+}
+
+@media (max-width: 768px) {
+	.chat-header {
+		display: flex !important;
+		position: relative;
+	}
+
+	.chat-sidebar {
+		display: none;
+	}
+
+	.chat-header button > i {
+		font-size: 20px;
+	}
 	
+	.button-holder {
+		width: 50px;
+	}
+
+	.show-users, .close-users {
+		position: absolute;
+		right: .5rem;
+		top: 50%;
+		translate: 0 -50%;
+		z-index: 999;
+		pointer-events: none;
+		visibility: hidden;
+		width: 50px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		> i {
+			transition-property: opacity, rotate;
+			transition-duration: 0.15s;
+			opacity: 0;
+			rotate: 90deg;
+		}
+	}
+
+	.show-users:hover, .close-users:hover {
+		text-shadow: 0 0 5px #fff8;
+	}
+
+	.chat-container:has(.users-container[style*="display: none;"]) .show-users,
+	.chat-container:has(.users-container[style*="display: flex;"]) .close-users {
+		visibility: visible;
+		pointer-events: all;
+
+		> i {
+			opacity: 1;
+			rotate: 0deg;
+		}
+	}
+}
+
+@media (max-width: 600px) {
+	.users-container {
+		position: absolute;
+		right: 0;
+		width: 30%;
+		height: 100%;
+		backdrop-filter: blur(5px);
+		border-top-left-radius: 0px;
+		border-bottom-left-radius: 0px;
+		background: #0000003b;
+
+		> .user-list-container {
+			background: #0008;
+		}
+	}
+}
+
+@media (max-width: 320px) {
+	.chat-form-container {
+		padding: 10px;
+	}
 }
