--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,7 @@
 	--light-color: #D9D9D9;
 	--accent-color-a: #0F3F57;
 	--accent-color-b: hsl(350, 70%, 30%);
+	--focus-accent: hsl(200, 71%, 70%);
 
 	--sb-size: 8px;
 	--sb-track-color: #0000;
@@ -46,12 +47,23 @@ a {
 	color: #ffff;
 	border: 0;
 	border-radius: 5px;
+	transition: all .1s ease-in-out;
+	outline: none;
 }
 
 .btn:disabled {
 	cursor: default;
-	background: #0F3F57aa;
+	background: hsla(200, 30%, 20%, 0.667);
 	color: #fff8;
+}
+
+.btn:hover:not(:disabled) {
+	background: hsl(200, 40%, 30%);
+	color: #ffff;
+}
+
+.btn:focus-visible {
+	box-shadow: 0 0 0 0.25rem var(--focus-accent);
 }
 
 .disable-this {
@@ -67,6 +79,21 @@ input {
 	outline: none;
 	border: none;
 	box-shadow: inset 0 0 0 0 black;
+}
+
+input[type='text'] {
+	flex: 1;
+	font-size: 16px;
+	padding: 10px;
+	height: 40px;
+	border-radius: 5px;
+	background: #303436aa;
+	color: #fff;
+	transition: all .05s ease-in-out;
+}
+
+input[type='text']:hover, input[type='text']:focus {
+	background: #303436ff;
 }
 
 /* ===== Scrollbar CSS ===== */
@@ -97,9 +124,9 @@ input {
 
 
 @keyframes shake {
-	0% { transform: translate(-2px,0px) rotate(0deg); box-shadow: inset 0 0 2px 1px #82030333; }
-	25% { transform: translate(3px,0px) rotate(0deg); box-shadow: inset 0 0 4px 2px #82030388; }
-	50% { transform: translate(-3px,0px) rotate(0deg); box-shadow: inset 0 0 4px 2px #82030388; }
-	75% { transform: translate(2px,0px) rotate(0deg); box-shadow: inset 0 0 2px 1px #82030333; }
+	0% { transform: translate(-2px,0px) rotate(0deg); box-shadow: inset 0 0 2px 0 #82030333; }
+	25% { transform: translate(3px,0px) rotate(0deg); box-shadow: inset 0 0 8px 0 #82030388; }
+	50% { transform: translate(-3px,0px) rotate(0deg); box-shadow: inset 0 0 8px 0 #82030388; }
+	75% { transform: translate(2px,0px) rotate(0deg); box-shadow: inset 0 0 2px 0 #82030333; }
 	100% { transform: translate(0px,0px) rotate(0deg); box-shadow: inset 0 0 0 0 #00000000; }
 }
