--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -108,13 +108,14 @@
 }
 
 .typing-container {
+	height: 20px;
 	padding: 0 20px;
 	background-color: var(--primary-color);
 	color: #fff;
 }
 
 .typing {
-	> p span {
+	> span {
 		font-weight: bold;
 	}
 }
